--- a/style/style.css
+++ b/style/style.css
@@ -43,9 +43,6 @@ header{
     color: #6a149b;
 }
 
-nav{
-   
-}
 
 nav ul{
     display: flex;
@@ -183,7 +180,7 @@ main{
     height:300px;
 
     background-color: #111;
-    opacity:0.95;  
+    opacity:0.9;
 
     overflow-y:scroll;
 }
@@ -266,5 +263,17 @@ footer{
         flex-direction: column;
         align-items: flex-start;
         padding-left:20px;
+    }
+    .search-box{
+        width: 300px;
+    }
+    .country-list{
+        width:300px;
+    }
+    .country-list ul{
+        padding-left: 0px;
+    }
+    .country-list ul li{
+        font-size:14px;
     }
 }
